--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,20 @@
 .form {
   opacity: 85%;
-  width: 400px;
+  width: 450px;
   background-color: var(--text-background);
+}
+
+@media (min-width: 680px) {
+  form {
+    max-width: 75%;
+    padding: 2em;
+  }
+}
+
+@media (max-width: 679.98px) {
+  form {
+    max-width: 90%;
+    padding: 2em;
+    max-height: 28em;
+  }
 }
