--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,20 +1,20 @@
 .form {
-  opacity: 85%;
-  width: 450px;
+  opacity: 90%;
+  width: 500px;
   background-color: var(--text-background);
+    padding: 2em;
 }
 
 @media (min-width: 680px) {
   form {
-    max-width: 75%;
-    padding: 2em;
+    /* max-width: 55%; */
+    max-height: auto;
   }
 }
 
 @media (max-width: 679.98px) {
   form {
-    max-width: 90%;
-    padding: 2em;
-    max-height: 28em;
+    max-width: 95%;
+    max-height: auto;
   }
 }
