--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,25 +1,11 @@
-article {
-  background-color: var(--text-background);
-  opacity: 90%;
-}
-
 div.profile-body {
   background-color: var(--text-background);
   opacity: 85%;
-  padding: 1em; 
 }
 
 img.profile-image {
   width: 300px;
   height: 300px;
-}
-
-h1.introduction,
-p.introduction,
-h2.introduction,
-p.introduction-body,
-li {
-  text-align: left;
 }
 
 p.introduction::first-line {
@@ -28,10 +14,19 @@ p.introduction::first-line {
 }
 
 @media (min-width: 680px) {
+  div.profile-body {
+    max-width: 75%;
+    padding: 1em 0 1em 10em;
+    margin-top: 2em;
+  }
+  p.introduction-body {
+    max-width: 85%;
+  }
 }
 
 @media (max-width: 679.98px) {
   div.profile-body {
     text-align: center;
+    padding: 1em;
   }
 }
