--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,21 @@ body {
   min-height: 46em;
   
 }
+
+.navbar {
+  z-index: 2;
+}
+
+.close-navbar-toggler {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.close-navbar-toggler.collapsed {
+  z-index: -1;
+}
