--- a/src/styles/resume.css
+++ b/src/styles/resume.css
@@ -1,17 +1,18 @@
 div.resume {
-  background-color: var(--text-background);
   opacity: 90%;
-  padding: 2em;
+  margin-top: 1em;
+  padding: 0;
 }
 
 @media (min-width: 680px) {
   .iframe-resume {
-   max-width: 90%; 
-
+    max-width: 70%;
+    padding: 1em;
   }
 }
 
 @media (max-width: 679.98px) {
   .iframe-resume {
+    /* max-width: 80%; */
   }
 }
